# totpaste

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: copy-zxing.js
src/: App.tsx  Camera.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  constants.rs  crypto.rs  lib.rs  main.rs  parsing.rs
src/components/: circular-progress.tsx  floating-add-button.tsx  truncated-hover-card.tsx
src/components/account/: account-card.tsx  account-drawer.tsx  account-form.tsx  account-list.tsx
src/components/camera/: camera-device-selector.tsx  camera-scanner.tsx  file-scanner.tsx
src/context/: tauri-event-context.tsx
src/hooks/: use-accounts.ts  use-window-visibility.ts
src/lib/: utils.ts
src/models/: account-dto.ts  account.ts
