[package]
name = "totpaste"
version = "0.1.1"
description = "totp tray manager"
authors = ["powse"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "totpaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
totp-rs = "5.7.0"
keyring = { version = "3.6.3", features = ["windows-native"] }
uuid = { version = "1.18.1", features = ["v4"] }
tauri-plugin-clipboard-manager = "2"
google_authenticator_converter = "0.2.0"
url = "2.5.7"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
